; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4proc.c_nfs4_set_rw_stateid.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4proc.c_nfs4_set_rw_stateid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_open_context = type { i32 }
%struct.nfs_lock_context = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs4_set_rw_stateid(i32* %0, %struct.nfs_open_context* %1, %struct.nfs_lock_context* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.nfs_open_context*, align 8
  %7 = alloca %struct.nfs_lock_context*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.nfs_open_context* %1, %struct.nfs_open_context** %6, align 8
  store %struct.nfs_lock_context* %2, %struct.nfs_lock_context** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.nfs_open_context*, %struct.nfs_open_context** %6, align 8
  %10 = getelementptr inbounds %struct.nfs_open_context, %struct.nfs_open_context* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load %struct.nfs_lock_context*, %struct.nfs_lock_context** %7, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @nfs4_select_rw_stateid(i32 %11, i32 %12, %struct.nfs_lock_context* %13, i32* %14, i32* null)
  ret i32 %15
}

declare dso_local i32 @nfs4_select_rw_stateid(i32, i32, %struct.nfs_lock_context*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
